--- a/buildspec.yml
+++ b/buildspec.yml
@@ -37,9 +37,9 @@ phases:
         - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' simple_jwt_api.yml
         - $(aws ecr get-login --no-include-email)
         - export KUBECONFIG=$HOME/.kube/config
+        - echo `ls -l`
         - pip3 install -r requirements.txt 
-        - python -m pytest test_main.pyecho `ls -l`
-
+        - python -m pytest test_main.py
   build:
     commands:
       - docker build --tag $REPOSITORY_URI:$TAG .
